@@ -66,7 +66,6 @@ static char rcsId[] =
 
 #include "ldap-nss.h"
 #include "ldap-ethers.h"
-#include "globals.h"
 #include "util.h"
 
 #ifdef HAVE_PORT_AFTER_H
