@@ -56,7 +56,6 @@ static char rcsId[] =
 
 #include "ldap-nss.h"
 #include "ldap-proto.h"
-#include "globals.h"
 #include "util.h"
 
 #ifdef HAVE_PORT_AFTER_H
