@@ -48,7 +48,6 @@ static char rcsId[] =
 
 #include "ldap-nss.h"
 #include "ldap-pwd.h"
-#include "globals.h"
 #include "util.h"
 
 #ifdef HAVE_PORT_AFTER_H
