@@ -61,7 +61,6 @@ static char rcsId[] =
 
 #include "ldap-nss.h"
 #include "ldap-service.h"
-#include "globals.h"
 #include "util.h"
 
 #ifdef HAVE_PORT_AFTER_H
